@@ -12,7 +12,9 @@
  *
  * \section Sec_MigrationXXXXXX Migrating from 091122 to XXXXXX
  *  
- *  <b>There is no migration information for this version.</b>
+ *  <b>Device Mode</b>
+ *    - The CALLBACK_HID_Device_CreateHIDReport() HID Device Class driver callback now has a new ReportType parameter to
+ *      indicate the report type to generate. Existing applications may simply add and ignore this additional parameter.
  *
  * \section Sec_Migration091122 Migrating from 090924 to 091122
  *  
